tests/rosetta/transpiler/Swift/conditional-structures-7.error
exit status 1
/tmp/TestSwiftTranspiler_Rosetta_Golden302161083/001/main.swift:15:13: error: 'nil' requires a contextual type
13 |     let x = String(describing: fetch_())
14 |     if (x == "cheese") {
15 |         _ = nil
   |             `- error: 'nil' requires a contextual type
16 |     } else if someCondition() {
17 |         _ = nil

/tmp/TestSwiftTranspiler_Rosetta_Golden302161083/001/main.swift:17:13: error: 'nil' requires a contextual type
15 |         _ = nil
16 |     } else if someCondition() {
17 |         _ = nil
   |             `- error: 'nil' requires a contextual type
18 |     }
19 |     
