tests/rosetta/transpiler/Swift/conditional-structures-7.swift
// Generated by Mochi transpiler v0.10.52 on 2025-08-01 22:07:37 GMT+7
import Foundation

func _p(_ v: Any?) -> String {
    if let val = v { return String(describing: val) }
    return "<nil>"
}

func fetch_() -> String {
    return ""
}
func example7() {
    let x = String(describing: fetch_())
    if (x == "cheese") {
        _ = nil
    } else if someCondition() {
        _ = nil
    }
    
}
func someCondition() -> Bool {
    return false
}
